# ThermalOdo

./: .gitignore  CMakeLists.txt  README.md
img/: SVDShow.m  calculate_score.asv  calculate_score.m  dt2.m  libsvd_mean_recompute_denoise_first_eigen_zero.cpp  libsvd_mean_recompute_denoise_first_eigen_zero.h  libsvd_mean_recompute_denoise_first_eigen_zero.prj  readme.txt  svd_mean_recompute_denoise_first_eigen_zero.m  test.asv  test.m  testproc.m
img/libsvd_mean_recompute_denoise_first_eigen_zero1/: PackagingLog.html
img/libsvd_mean_recompute_denoise_first_eigen_zero1/for_redistribution_files_only/: GettingStarted.html
img/libsvd_mean_recompute_denoise_first_eigen_zero1/for_redistribution_files_only/v2/generic_interface/: libsvd_mean_recompute_denoise_first_eigen_zero.ctf
img/libsvd_mean_recompute_denoise_first_eigen_zero1/for_testing/: libsvd_mean_recompute_denoise_first_eigen_zero.cpp  libsvd_mean_recompute_denoise_first_eigen_zero.exports  libsvd_mean_recompute_denoise_first_eigen_zero.h
img/v2/generic_interface/: libsvd_mean_recompute_denoise_first_eigen_zero.ctf  readme.txt
include/: libsvd_mean_recompute_denoise_first_eigen_zero.h  thermalodo.h
include/Utils/: PoseSolve.h  ReadData.h  algorithm.h  bm3d.h  feature.h  projection.h
include/localUtils/: localUtils.h
include/orb_extract/: ORBextractor.h  ORBmatcher.h  RtGenerator.h
src/: orb_extract.cpp  projectRGB.cpp
src/Utils/: BM3D.cpp  PoseSolve.cc  ReadData.cc  algorithm.cc  feature.cc  projection.cc
src/bpvo/: ProcessRelative.cpp  ProcessRelative.h
src/dso_front/: CMakeLists.txt
src/dso_front/PixelGradient_src/: PixelGradient.cpp
src/dso_front/PixelSelector_src/: PixelSelector.cpp
src/dso_front/include/: PixelGradient.h  PixelSelector.h
src/dso_front/src/: PixelGradient.cpp  PixelSelector.cpp
src/localUtils/: localUtils.cc
src/orb_extract/: ORBextractor.cc  ORBmatcher.cc  RtGenerator.cc
test/: expriment_graduate.cpp  expriment_iros.cpp  projectRGB_Labdata.cpp  test_bit_plane.cpp  test_denoise.cpp  test_dft.cpp  test_dso_front.cpp  test_image_svd.cpp  test_orb.cpp  test_pose_solve.cpp  test_read_img.cpp  test_thermal_association.cpp  trushcode.cpp
